--- a/news_page/pages/news_domestic_en.html
+++ b/news_page/pages/news_domestic_en.html
@@ -10,7 +10,7 @@
 <div class="wrapper col0">
   <div id="topline">
     <ul>
-      <li><a href="news_zh.html">Change Language/切换语言</a></li>
+      <li><a href="news_domestic_zh.html">切换语言/Change Language</a></li>
     </ul>
     <br class="clear" />
   </div>
