--- a/news_page/pages/news_en.html
+++ b/news_page/pages/news_en.html
@@ -41,8 +41,8 @@
 <!-- ####################################################################################################### -->
 <div class="wrapper">
   <div id="adblock">
-    <p>Click the button to go back to the survey</p>
-    <button class="button button1" onclick="window.location.href='https://kent.qualtrics.com/jfe/form/SV_cJbRtuah8xPDPts';">Back</button>
+    <!-- <p>Click the button to go back to the survey</p> -->
+    <button class="button button1" onclick="window.location.href='https://kent.qualtrics.com/jfe/form/SV_cJbRtuah8xPDPts';">Back to Survey</button>
     <br class="clear" />
   </div>
 </div>
