--- a/news_page/pages/news_zh.html
+++ b/news_page/pages/news_zh.html
@@ -41,8 +41,8 @@
 <!-- ####################################################################################################### -->
 <div class="wrapper">
   <div id="adblock">
-    <p>点击下方按钮回到问卷调查</p>
-    <button class="button button1" onclick="window.location.href='https://kent.qualtrics.com/jfe/form/SV_e5OStKJyQMcLmDQ';">返回</button>
+    <!-- <p>点击下方按钮回到问卷调查</p> -->
+    <button class="button button1" onclick="window.location.href='https://kent.qualtrics.com/jfe/form/SV_e5OStKJyQMcLmDQ';">返回问卷</button>
     <br class="clear" />
   </div>
 </div>
