--- a/news_page/pages/news_en.html
+++ b/news_page/pages/news_en.html
@@ -42,7 +42,7 @@
 <div class="wrapper">
   <div id="adblock">
     <!-- <p>Click the button to go back to the survey</p> -->
-    <button class="button button1" onclick="window.location.href='https://kent.qualtrics.com/jfe/form/SV_cJbRtuah8xPDPts';">Back to Survey</button>
+    <button class="button button1" onclick="window.location.href='https://kent.yul1.qualtrics.com/jfe/preview/previewId/c547c881-809d-4938-a040-bc99cce47e08/SV_9pfsLoafSh4z7pA?Q_CHL=preview&Q_SurveyVersionID=current';">Back to Survey</button>
     <br class="clear" />
   </div>
 </div>
