Update Chinese news websites

--- a/news_page/pages/news_zh.html
+++ b/news_page/pages/news_zh.html
@@ -10,7 +10,7 @@
 <div class="wrapper col0">
   <div id="topline">
     <ul>
-      <li><a href="news_en.html">Change Language/切换语言</a></li>
+      <li><a href="#">Change Language/切换语言</a></li>
     </ul>
     <br class="clear" />
   </div>
@@ -19,7 +19,7 @@
 <div class="wrapper">
   <div id="header">
     <div class="fl_left">
-      <h1><a href="../index.html"><strong>T</strong>ORONTO <strong>S</strong>TAR</a></h1>
+      <h1><a href="#"><strong>T</strong>ORONTO <strong>S</strong>TAR</a></h1>
       <p>现在订阅!</p>
     </div>
     <div class="fl_right"><img src="../images/news.png" alt="" width="60" height="60"/></div>
